--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -1,6 +1,6 @@
 <template name="map">
     <div id="container">
-      <h1 class="title">Meteor Leaflet Demo</h1>
+      <h1 class="title">Interactive map</h1>
       <div id="map" class="map"></div>
       <div class="notice">
         Double-click on map creates a marker<br>
