--- a/client/styles.css
+++ b/client/styles.css
@@ -6,26 +6,10 @@ html, body {
 body {
   font-family: Arial;
 }
-
-#container {
-  width: 100%;
-  margin: 15px auto 0 auto;
-}
-
 .map {
+    height: 100vh;
 }
 
-.title {
-  margin-top: 0;
-  margin-bottom: 10px;
-  text-align: center;
-}
-
-.notice {
-  margin: 10px 0 5px 0;
-  line-height: 1.5;
-  text-align: center;
-}
 
 @media all and (max-width: 480px) {
   /* styles for iPhone/Android landscape (and really narrow browser windows) */
