add link to map on home page

--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,6 +1,12 @@
 <template name="home">
+   <nav>
+       <ul>
+           <li><a href="/map">Map</a></li>
+       </ul>
+   </nav>
     <div id="container">
       <h1 class="title">Home page</h1>
+
 
     </div>
 </template>
