--- a/client/styles.css
+++ b/client/styles.css
@@ -1,33 +1,78 @@
-html, body {
-  margin: 0;
-  padding: 0;
+html,
+body {
+    margin: 0;
+    padding: 0;
 }
 
 body {
-  font-family: Arial;
+    font-family: Arial;
 }
+
 .map {
     height: 100vh;
 }
 
+.trash {
+    background: #000;
+    border-radius: 50%;
+/*
+    width: 50px;
+    height: 50px;
+*/
+}
+
+/*
+.current {
+  position: absolute;
+  left: 400px;
+  top: 150px;
+  -webkit-animation: pulse 2s infinite ease-out;
+  font-size: 20px;
+  border-radius: 50%;
+  border: 1px solid rgba(255, 0, 0, 0);
+}
+
+@-webkit-keyframes pulse {
+  0% {
+    width: 0px;
+    height: 0px;
+    left: 400px;
+    top: 150px;
+    border-color: #fff;
+  }
+  10% {
+    border-color: rgba(0, 170, 255, 0.3);
+  }
+  30% {
+    border-color: rgba(0, 170, 255, 0.7);
+  }
+  100% {
+    width: 70px;
+    height: 70px;
+    left: 365px;
+    top: 115px;
+    borer-color: white;
+  }
+}
+*/
 
 @media all and (max-width: 480px) {
-  /* styles for iPhone/Android landscape (and really narrow browser windows) */
-  .notice {
-    font-size: 11px;
-  }
+    /* styles for iPhone/Android landscape (and really narrow browser windows) */
+    .notice {
+        font-size: 11px;
+    }
 }
 
 @media all and (max-width: 320px) {
-  /* styles for iPhone/Android portrait */
-  .notice {
-      font-size: 11px;
-  }
+    /* styles for iPhone/Android portrait */
+    .notice {
+        font-size: 11px;
+    }
 }
 
 @media all and (max-width: 240px) {
-  /* styles for smaller devices */
-  .notice{
-    font-size: 11px;
-  }
+    /* styles for smaller devices */
+    .notice {
+        font-size: 11px;
+    }
 }
