--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,12 +1,10 @@
 <template name="home">
+  <h1 class="homepagetitle red">Amsterdam Centrum</h1>
    <nav>
        <ul>
-           <li><a href="/map">Map</a></li>
+           <li><a href="/map" class="homelink black">Prullenbakken in amsterdam centrum</a></li>
+           <li><a href="/map" class="homelink black">Schoonmaak intensiteit</a></li>
+           <li><a href="/map" class="homelink black">Aantal mensen in amsterdam centrum</a></li>
        </ul>
    </nav>
-    <div id="container">
-      <h1 class="title">Home page</h1>
-
-
-    </div>
 </template>
