--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -15,10 +15,21 @@ body {
 .trash {
     background: #000;
     border-radius: 50%;
-/*
-    width: 50px;
-    height: 50px;
-*/
+}
+
+.red{
+    color:#D83E41;
+}
+.homepagetitle{
+    text-transform: uppercase;
+}
+
+.leaflet-container {
+    background-color:rgba(255,0,0,0.0);
+}
+
+.leaflet-top leaflet-left{
+    display: none;
 }
 
 /*
