--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,10 +1,19 @@
 <template name="home">
-  <h1 class="homepagetitle red">Amsterdam Centrum</h1>
-   <nav>
-       <ul>
-           <li><a href="/map" class="homelink black">Prullenbakken in amsterdam centrum</a></li>
-           <li><a href="/map" class="homelink black">Schoonmaak intensiteit</a></li>
-           <li><a href="/map" class="homelink black">Aantal mensen in amsterdam centrum</a></li>
-       </ul>
-   </nav>
+    <section class="homepage">
+        <h1 class="homepagetitle textcenter red">Amsterdam Centrum</h1>
+        <section class="textcenter homeaction">
+           <img src="icons/trash.svg" alt="">
+            <a href="/map" class="homelink black">Prullenbakken in amsterdam centrum</a>
+        </section>
+        <section class="textcenter homeaction">
+                  <img src="icons/trash.svg" alt="">
+            <a href="/map" class="homelink black">Schoonmaak intensiteit</a>
+        </section>
+        <section class="textcenter homeaction">
+                  <img src="icons/trash.svg" alt="">
+            <a href="/map" class="homelink black">Aantal mensen in amsterdam centrum</a>
+        </section>
+
+    </section>
+
 </template>
