add map of amsterdam in left corner

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -1,4 +1,5 @@
 <template name="map">
+          <img src="amsterdammap.svg" alt="" class="amsterdammap">
     <div id="container">
       <div id="map" class="map"></div>
     </div>
