--- a/client/stylesheets/styles.css
+++ b/client/stylesheets/styles.css
@@ -11,6 +11,13 @@ body {
 .map {
     height: 100vh;
 }
+.amsterdammap{
+    position: absolute;
+    width: 200px;
+    margin: 1em;
+    height: auto;
+    z-index: 1;
+}
 
 .trash {
     background: #000;
