add separate style sheets for every view. And add hover on svg

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -1,6 +1,6 @@
 <template name="map">
-          <img src="amsterdammap.svg" alt="" class="amsterdammap">
+    <object data="amsterdammap.svg" type="image/svg+xml" class="amsterdammap">Your browser does not support SVG</object>
     <div id="container">
-      <div id="map" class="map"></div>
+        <div id="map" class="map"></div>
     </div>
 </template>
