--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -2,5 +2,6 @@
     <object data="amsterdammap.svg" type="image/svg+xml" class="amsterdammap">Your browser does not support SVG</object>
     <div id="container">
         <div id="map" class="map"></div>
+        <div id="placename" class="namediv"></div>
     </div>
 </template>
