--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -1,17 +1,14 @@
 <template name="home">
+   <section class="background">
+
+
     <section class="homepage">
         <h1 class="homepagetitle textcenter red">Amsterdam Centrum</h1>
-        <section class="textcenter homeaction">
-           <img src="icons/trash.svg" alt="">
-            <a href="/map" class="homelink black">Prullenbakken in amsterdam centrum</a>
-        </section>
-        <section class="textcenter homeaction">
-                  <img src="icons/trash.svg" alt="">
-            <a href="/map" class="homelink black">Schoonmaak intensiteit</a>
-        </section>
-        <section class="textcenter homeaction">
-                  <img src="icons/trash.svg" alt="">
-            <a href="/map" class="homelink black">Aantal mensen in amsterdam centrum</a>
+
+        <section class="popup">
+            <p>Op deze interactieve kaart is te zien hoeveel prullenbakken zich in amsterdam bevinden in combinatie met de schoonmaakintensiteit en de drukte.</p>
+            <a href="/map">Naar de kaart</a>
         </section>
     </section>
+       </section>
 </template>
