--- a/client/stylesheets/home.css
+++ b/client/stylesheets/home.css
@@ -1,5 +1,14 @@
+.background{
+    height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
+    background: url('img/background.png');
+  background-size: cover;
+}
+
 .homepage {
-    margin: 2em;
+/*    margin: 2em;*/
 }
 
 .textcenter {
@@ -12,12 +21,12 @@
 }
 
 .homeaction {
-    margin: 2em;
+/*    margin: 2em;*/
     font-weight: 700;
 }
 
 .homepagetitle {
-    margin: 3em;
+    margin: 0em;
     font-size: 3em;
 }
 
