--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -1,7 +1,15 @@
 <template name="map">
+    <header>
+        <section class="logo">
+            <img src="img/logo.png" alt="logo">
+        </section>
+    </header>
     <section class="filter">
-        <fieldset>
+        <header class="filtertitle">
             <h2>Filters</h2>
+        </header>
+
+        <fieldset>
             <input type="checkbox">
             <label for="">prullenbakken</label>
 
