--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -5,15 +5,25 @@
         </section>
     </header>
     <section class="filter">
-        <header class="filtertitle">
+        <section class="filtertitle">
             <h2>Filters</h2>
-        </header>
+            <img src="icons/close.svg" alt="closebutton">
+        </section>
+        <section class="filters">
+           <div>
+               <img src="icons/triangle.svg" alt="Drukte">
+                <p>Drukte</p>
+            </div>
+            <div>
+                <img src="icons/square.svg" alt="Prullenbakken">
+                <p>Prullenbakken</p>
+            </div>
 
-        <fieldset>
-            <input type="checkbox">
-            <label for="">prullenbakken</label>
-
-        </fieldset>
+            <div>
+               <img src="icons/circle.svg" alt="Schoonmaak intensiteit">
+               <p>Schoonmaak intensiteit</p>
+            </div>
+        </section>
     </section>
     <section class="informotion">
         <object data="amsterdammap.svg" type="image/svg+xml" class="amsterdammap">Your browser does not support SVG</object>
