--- a/client/stylesheets/map.css
+++ b/client/stylesheets/map.css
@@ -1,56 +1,53 @@
 header {
-    height: 60px;
+    height: 70px;
 }
 
 .logo > img {
     margin: 1em;
-    width: 10.1%;
-    height: 2.8%;
+    height: 40px;
+/*    width: auto;*/
 }
-
-.informotion {}
 
 .map {
     height: 100vh;
+    width: 100vw;
 }
 
 .amsterdammap {
     position: absolute;
-    width: 200px;
+    width: 60px;
     margin: 1em;
     height: auto;
     z-index: 1;
 }
 
 .trashicon {
-    background: #000;
-    border-radius: 50%;
-    width: 8px !important;
-    height: 8px !important;
+    background-color: #009DF5;
+    border-radius: 0%;
+    width: 6px !important;
+    height: 6px !important;
 }
 
 .fotoicon,
 .foto-icon-july,
 .foto-icon-august {
-    border-radius: 0%;
-    width: 8px !important;
-    height: 8px !important;
+    width: 0 !important;
+    height: 0 !important;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-bottom: 5px solid #A0171C;
 }
 
 .foto-icon-july {
-    background: #D40CF8;
+    /*    background: #AE2424;*/
 }
 
 .foto-icon-august {
-    background: #0CF85E;
+    /*    background: #AE2424;*/
 }
 
 .fotoicon {
-    background: #F80C79;
-}
-
-.trash:hover {
-    background: #FF7D7D;
+    /*    background: #AE2424;*/
 }
 
 .leaflet-container {
