add layout for popup

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -29,7 +29,7 @@
         <object data="amsterdammap.svg" type="image/svg+xml" class="amsterdammap">Your browser does not support SVG</object>
         <div id="container">
             <div id="map" class="map"></div>
-            <div id="placename" class="namediv"></div>
+            <div id="placename" class="popup"></div>
         </div>
     </section>
 
