--- a/client/stylesheets/map.css
+++ b/client/stylesheets/map.css
@@ -57,3 +57,26 @@ header {
 .leaflet-top leaflet-left {
     display: none;
 }
+
+/*popup*/
+.popup {
+    color: #fff !important;
+    position: relative;
+    height: 30px;
+    padding: 15px;
+    margin: 1em 0 3em;
+    color: #000;
+    background: #000000;
+}
+
+.popup:after {
+    content: "";
+    display: block;
+    position: absolute;
+    bottom: -15px;
+    left: 20px;
+    width: 0;
+    border-width: 15px 15px 0;
+    border-style: solid;
+    border-color: #000 transparent;
+}
