--- a/client/templates/home/home.html
+++ b/client/templates/home/home.html
@@ -2,7 +2,7 @@
    <section class="background">
     <section class="homepage textcenter">
         <h1 class="homepagetitle textcenter red">Amsterdam Centrum</h1>
-        <section class="popup">
+        <section class="">
             <p>Op deze interactieve kaart is te zien hoeveel prullenbakken zich in amsterdam bevinden in combinatie met de schoonmaakintensiteit en de drukte.</p>
             <a href="/map" class="homelink">Naar de kaart</a>
         </section>
