--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -7,19 +7,21 @@
     <section class="filter">
         <section class="filtertitle">
             <h2>Filters</h2>
-            <img src="icons/close.svg" alt="closebutton">
+            <div class="togglefilter">
+                 <img src="icons/close.svg" alt="closebutton" class="togglefilterimg">
+            </div>
+
         </section>
         <section class="filters">
-           <div>
+           <div class="crowdedness">
                <img src="icons/triangle.svg" alt="Drukte">
                 <p>Drukte</p>
             </div>
-            <div>
+            <div class="trashes">
                 <img src="icons/square.svg" alt="Prullenbakken">
                 <p>Prullenbakken</p>
             </div>
-
-            <div>
+            <div class="cleaning-intensity">
                <img src="icons/circle.svg" alt="Schoonmaak intensiteit">
                <p>Schoonmaak intensiteit</p>
             </div>
