--- a/client/stylesheets/map.next.css
+++ b/client/stylesheets/map.next.css
@@ -1,17 +1,7 @@
-header {
-    height: 70px;
-}
-
-.logo > img {
-    margin: 1em;
-    height: 40px;
-/*    width: auto;*/
-}
-
 .map {
     margin-left: 243px;
-    height: 100vh;
-    width: 100%;
+    height: calc(100vh - 70px);
+    width: calc(100vw - 243px);
 }
 
 .amsterdammap {
@@ -59,7 +49,9 @@ header {
     display: none;
 }
 
+
 /*popup*/
+
 .popup {
     color: #fff !important;
     position: relative;
@@ -80,4 +72,8 @@ header {
     border-width: 15px 15px 0;
     border-style: solid;
     border-color: #000 transparent;
+}
+
+.none {
+    display: none !important;
 }
