add "toon wijken" animation

--- a/client/stylesheets/filter.next.css
+++ b/client/stylesheets/filter.next.css
@@ -17,7 +17,7 @@
     font-size: 15px;
     text-transform: uppercase;
     height: auto;
-    background: #BD2C2C;
+    background: #bd2c2c;
     color: #fff;
     width: 300px;
     margin: 0;
