--- a/client/stylesheets/header.next.css
+++ b/client/stylesheets/header.next.css
@@ -13,10 +13,10 @@ header {
 }
 
 .wijken {
-    margin: 10px;
-    height: 50px;
+    margin: 10px 30px 10px 10px;
+    height: 40px;
     float: right;
-    padding:0;
+    padding: 2px 10px;
     display: inline-block;
     width: 150px;
     border-style: solid;
@@ -25,15 +25,17 @@ header {
 }
 
 .wijken > img {
-    width: 15px;
+    height: 26px;
     display: inline-block;
-    margin: 5px;
+    margin: 7px;
 }
 
 .wijken > p {
-    margin: 0;
-    padding: 0;
-    font-weight: 500;
+    margin: 11px;
+    padding: 0 0 20px 0 0;
+    font-size: 13px;
+    font-weight: 400;
     text-transform: uppercase;
+    position: absolute;
     display: inline-block;
 }
