add "bekijk" button

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -37,7 +37,12 @@
     <section class="informotion">
         <div id="container">
             <div id="map" class="map"></div>
-            <div id="placename" class="popup none"></div>
+            <div class="mappopup none">
+                <div class="showmore">Bekijk ></div>
+                <div class="shadow"></div>
+                <div id="placename" class="popup"></div>
+            </div>
+
         </div>
     </section>
 
