--- a/client/stylesheets/map.next.css
+++ b/client/stylesheets/map.next.css
@@ -52,12 +52,39 @@
 
 /*popup*/
 
+.showmore {
+    position: relative;
+    top: 5px;
+    text-transform: uppercase;
+    padding: 8px 15px;
+    background: #d8d8d8;
+    color: #636363;
+    font-weight: 700;
+    width: 70px;
+    z-index: 9;
+}
+
+.showmore:hover {
+    color: #2C2C2C;
+    text-decoration: underline;
+}
+
+.shadow {
+    position: relative;
+    z-index: 10;
+    width: 0;
+    height: 0;
+    border-left: 100px solid transparent;
+    /*    border-right: 5px solid transparent;*/
+    border-bottom: 5px solid #ABABAB;
+}
+
 .popup {
+    font-weight: 700;
+    text-transform: uppercase;
     color: #fff !important;
     position: relative;
-    height: 30px;
     padding: 15px;
-    margin: 1em 0 3em;
     color: #000;
     background: #000000;
 }
