add shadow to popup

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -39,8 +39,9 @@
             <div id="map" class="map"></div>
             <div class="mappopup none">
                 <div class="showmore">Bekijk ></div>
-                <div class="shadow"></div>
+                <div class="showmoreshadow"></div>
                 <div id="placename" class="popup"></div>
+                <div class="popupshadow"></div>
             </div>
 
         </div>
