--- a/client/stylesheets/map.next.css
+++ b/client/stylesheets/map.next.css
@@ -56,7 +56,7 @@
     position: relative;
     top: 5px;
     text-transform: uppercase;
-    padding: 8px 15px;
+    padding: 8px 15px 5px 15px;
     background: #d8d8d8;
     color: #636363;
     font-weight: 700;
@@ -69,14 +69,14 @@
     text-decoration: underline;
 }
 
-.shadow {
+.showmoreshadow {
     position: relative;
     z-index: 10;
     width: 0;
     height: 0;
     border-left: 100px solid transparent;
     /*    border-right: 5px solid transparent;*/
-    border-bottom: 5px solid #ABABAB;
+    border-bottom: 5px solid rgba(0, 0, 0, 0.2);
 }
 
 .popup {
@@ -93,12 +93,23 @@
     content: "";
     display: block;
     position: absolute;
-    bottom: -15px;
-    left: 20px;
+    bottom: -10px;
+    left: 30px;
     width: 0;
-    border-width: 15px 15px 0;
+    border-width: 10px 10px 0;
     border-style: solid;
     border-color: #000 transparent;
+}
+
+.popupshadow {
+    background-color: rgba(0, 0, 0, 0.2);
+    border-radius: 100px / 15px;
+    position: relative;
+    top: 15px;
+    left: 15px;
+    width: 80px;
+    height: 10px;
+    z-index: 8;
 }
 
 .none {
