Added click classes
On click classes will be added to paths, with these classes styling can
be added.

--- a/client/stylesheets/map.next.css
+++ b/client/stylesheets/map.next.css
@@ -115,3 +115,12 @@
 .none {
     display: none !important;
 }
+
+.wit {
+    fill: "#ffffff";
+    fill-opacity: 1;
+}
+
+.transparent {
+    fill: transparent;   
+}
