--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -3,9 +3,9 @@
         <section class="logo">
             <img src="img/logo.png" alt="logo">
         </section>
-        <section class="wijken">
+        <section class="wijken noselect">
             <img src="img/wijken.png" alt="">
-            <p>Toon wijken</p>
+            <p class="noselect">Toon wijken</p>
         </section>
     </header>
     <section class="filter">
@@ -38,9 +38,9 @@
         <div id="container">
             <div id="map" class="map"></div>
             <div class="mappopup none">
-                <div class="showmore">Bekijk ></div>
+                <div class="showmore noselect">Bekijk ></div>
                 <div class="showmoreshadow"></div>
-                <div id="placename" class="popup"></div>
+                <div id="placename" class="popup noselect"></div>
                 <div class="popupshadow"></div>
             </div>
 
