--- a/client/stylesheets/style.css
+++ b/client/stylesheets/style.css
@@ -8,7 +8,7 @@ body {
 }
 
 body {
-      font-family: 'Fira Sans', sans-serif;
+    font-family: 'Fira Sans', sans-serif;
 }
 
 .red {
@@ -18,6 +18,16 @@ body {
 .black {
     color: #333333;
 }
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 
 /*
 .current {
