Added onclick styling
The markers are brought to the back. Added stroke to class “overlay”.

--- a/client/stylesheets/map.next.css
+++ b/client/stylesheets/map.next.css
@@ -116,11 +116,19 @@
     display: none !important;
 }
 
-.wit {
+.overlay {
     fill: "#ffffff";
     fill-opacity: 1;
+    stroke: #ffffff;
+    stroke-width:2px;
+    stroke-linejoin: round;
+    
 }
 
 .transparent {
     fill: transparent;   
+}
+
+.leaflet-marker-pane {
+    z-index: 2;
 }
