Changed map size
Map now stays at 100% width, even when the legend is minified

--- a/client/stylesheets/map.next.css
+++ b/client/stylesheets/map.next.css
@@ -1,7 +1,12 @@
+body {
+    overflow-x: hidden;
+}
+
 .map {
-    margin-left: 243px;
+    margin-left: 130px;
     height: calc(100vh - 70px);
-    width: calc(100vw - 243px);
+/*    width: calc(100vw - 243px);*/
+    width: 100%;
 }
 
 .amsterdammap {
