--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -3,6 +3,11 @@
         <section class="logo">
             <img src="img/logo.png" alt="logo">
         </section>
+        <section>
+            <p>juli</p>
+            <p>augustus</p>
+            <p>september</p>
+        </section>
         <section class="wijken noselect">
             <img src="img/wijken.png" alt="">
             <p class="noselect">Toon wijken</p>
@@ -14,7 +19,6 @@
             <div class="togglefilter">
                 <img src="icons/close.svg" alt="closebutton" class="togglefilterimg">
             </div>
-
         </section>
         <section class="filters">
             <div class="crowdedness">
@@ -43,7 +47,6 @@
                 <div id="placename" class="popup noselect"></div>
                 <div class="popupshadow"></div>
             </div>
-
         </div>
     </section>
 
