--- a/client/stylesheets/map.next.css
+++ b/client/stylesheets/map.next.css
@@ -141,7 +141,7 @@ html, body {
     z-index: 2;
 }
 
-.toonwijk {
+.showdistrict {
     stroke: #ADADAD;
     stroke-width: 2px;
     stroke-linejoin: round;
