--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -10,8 +10,8 @@
             <p>september</p>
         </section>
 -->
-        <section class="wijken noselect">
-            <img src="img/wijken.png" alt="">
+        <section class="districts noselect">
+            <img src="img/districts.png" alt="">
             <p class="noselect">Toon wijken</p>
         </section>
     </header>
