--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -3,13 +3,13 @@
         <section class="logo">
             <img src="img/logo.png" alt="logo">
         </section>
-<!--
-        <section>
-            <p>juli</p>
-            <p>augustus</p>
-            <p>september</p>
+        <section class="monthselect">
+            <img src="icons/previous.svg" alt="previous" class="monthprevious">
+            <div class="month none">juli</div>
+            <div class="month none">augustus</div>
+            <div class="month">september</div>
+            <img src="icons/next.svg" alt="next" class="monthnext">
         </section>
--->
         <section class="districts noselect">
             <img src="img/districts.png" alt="">
             <p class="noselect">Toon wijken</p>
