add controller for months

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -4,11 +4,15 @@
             <img src="img/logo.png" alt="logo">
         </section>
         <section class="monthselect">
-            <img src="icons/previous.svg" alt="previous" class="monthprevious">
-            <div class="month none">juli</div>
-            <div class="month none">augustus</div>
-            <div class="month">september</div>
-            <img src="icons/next.svg" alt="next" class="monthnext">
+            <img src="icons/previous.svg" alt="previous" class="previousmonth">
+            <div class="months">
+                <section class="slides">
+                    <div class="month noselect">juli</div>
+                    <div class="month noselect">augustus</div>
+                    <div class="month noselect">september</div>
+                </section>
+            </div>
+            <img src="icons/next.svg" alt="next" class="nextmonth">
         </section>
         <section class="districts noselect">
             <img src="img/districts.png" alt="">
