--- a/client/stylesheets/header.next.css
+++ b/client/stylesheets/header.next.css
@@ -1,4 +1,5 @@
 header {
+    clear: both;
     height: 70px;
 }
 
@@ -11,32 +12,58 @@ header {
     height: 30px;
 }
 
-.month {
-    display: inline-block;
-    color: #333333;
-}
-
 .monthselect {
-    float: right;
-    padding: 20px 40px 10px 40px;
+    right: 250px;
+    position: absolute;
+    padding: 25px;
+    height: 30px;
     display: inline-block;
     width: 150px;
+    /*    padding: 20px 40px 10px 40px;*/
 }
 
-.monthprevious {
+.month {
+    width: 90px;
+    text-align: center;
     display: inline-block;
-    width: 20px;
+}
+.months {
+    position: relative;
+    display: inline-block;
+    width: 60%;
+    padding: 0 5%;
+    height: 30px;
+    white-space: nowrap;
+    overflow: hidden;
 }
 
-.monthnext {
+/*
+
+.month {
+
+    width: 100%;
+    color: #333333;
+    text-align: center;
+}
+*/
+
+.previousmonth {
     display: inline-block;
-    width: 20px;
+    float: left;
+    width: 15%;
+}
+
+.nextmonth {
+    display: inline-block;
+    float: right;
+    width: 15%;
 }
 
 .districts {
+    right: 0px;
+    position: absolute;
     margin: 10px 30px 10px 10px;
     height: 40px;
-    float: right;
     padding: 2px 10px;
     display: inline-block;
     width: 150px;
