add statics pane

--- a/client/stylesheets/map.next.css
+++ b/client/stylesheets/map.next.css
@@ -129,7 +129,7 @@ html, body {
 }
 
 .showdistrict {
-    stroke: #ADADAD;
+    stroke: #D1D1D1;
     stroke-width: 2px;
     stroke-linejoin: round;
 }
