--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -53,4 +53,9 @@
             <div class="popupshadow"></div>
         </div>
     </section>
+    <section class="statistics">
+        <h2 class="districtname">Wijknaam</h2>
+        <div class="graphs"></div>
+    </section>
+
 </template>
