add close button

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -18,6 +18,9 @@
             <img src="img/districts.png" alt="">
             <p class="noselect">Toon wijken</p>
         </section>
+        <section class="close noselect none">
+            <img src="icons/close_black.svg" alt="close" class="">
+        </section>
     </header>
     <section class="filter">
         <section class="filtertitle">
