--- a/client/stylesheets/header.next.css
+++ b/client/stylesheets/header.next.css
@@ -28,6 +28,7 @@ header {
     text-align: center;
     display: inline-block;
 }
+
 .months {
     position: relative;
     display: inline-block;
@@ -37,6 +38,7 @@ header {
     white-space: nowrap;
     overflow: hidden;
 }
+
 
 /*
 
@@ -87,4 +89,23 @@ header {
     text-transform: uppercase;
     position: absolute;
     display: inline-block;
+}
+
+.close {
+    right: 0px;
+    position: absolute;
+    margin: 10px 30px 10px 10px;
+    height: 40px;
+    padding: 2px 10px;
+    display: inline-block;
+    width: 30px;
+    border-style: solid;
+    border-width: 3px;
+    border-color: #333333;
+}
+
+.close img {
+    height: 30px;
+    display: inline-block;
+    margin: 5px 0px 3px 0px;
 }
