zoom in when clicking on district

--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -56,7 +56,7 @@
             <div class="popupshadow"></div>
         </div>
     </section>
-    <section class="statistics">
+    <section class="statistics none">
         <h2 class="districtname">Wijknaam</h2>
         <div class="graphs"></div>
     </section>
