--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -15,7 +15,7 @@
             <img src="icons/next.svg" alt="next" class="nextmonth">
         </section>
         <section class="districts noselect">
-            <img src="img/districts.png" alt="">
+            <img src="icons/districts.svg" alt="districts">
             <p class="noselect">Toon wijken</p>
         </section>
         <section class="close noselect none">
