--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -4,7 +4,7 @@
             <img src="img/logo.png" alt="logo">
         </section>
         <section class="monthselect">
-            <img src="icons/previous.svg" alt="previous" class="previousmonth">
+            <img src="icons/previous_black.svg" alt="previous" class="previousmonth">
             <div class="months">
                 <section class="slides">
                     <div class="month noselect">juli</div>
@@ -12,7 +12,7 @@
                     <div class="month noselect">september</div>
                 </section>
             </div>
-            <img src="icons/next.svg" alt="next" class="nextmonth">
+            <img src="icons/next_black.svg" alt="next" class="nextmonth">
         </section>
         <section class="districts noselect">
             <img src="icons/districts.svg" alt="districts">
@@ -20,6 +20,7 @@
         </section>
         <section class="close noselect none">
             <img src="icons/close_black.svg" alt="close" class="">
+            <p class="noselect">Sluit</p>
         </section>
     </header>
     <section class="filter">
@@ -59,6 +60,11 @@
     <section class="statistics none">
         <h2 class="districtname">Wijknaam</h2>
         <div class="graphs"></div>
+    </section>
+    <section class="navigationbar none">
+       <img src="icons/previous_white.svg" alt="previous" class="previousdistrict">
+        <h2 class="districtnamefooter">Wijknaam</h2>
+        <img src="icons/next_white.svg" alt="next" class="nextdistrict">
     </section>
 
 </template>
