--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -20,7 +20,7 @@
         </section>
         <section class="close noselect none">
             <img src="icons/close_black.svg" alt="close" class="">
-            <p class="noselect">Sluit</p>
+            <p class="noselect">Sluiten</p>
         </section>
     </header>
     <section class="filter">
