--- a/client/templates/map/map.html
+++ b/client/templates/map/map.html
@@ -58,12 +58,22 @@
         </div>
     </section>
     <section class="statistics none">
-        <h2 class="districtname">Wijknaam</h2>
-        <div class="graphs"></div>
+        <div>
+            <h2 class="grade">Waarderingscijfer</h2>
+            <p class="mark grade-mark">0</p>
+        </div>
+        <div>
+            <h2 class="amount-trashes">Aantal prullenbakken</h2>
+            <p class="mark amount-trashes-mark">0</p>
+        </div>
+        <div>
+            <h2 class="amount-photos">Aantal Foto uploads</h2>
+            <p class="mark amount-photos-mark">0</p>
+        </div>
     </section>
     <section class="navigationbar none">
-       <img src="icons/previous_white.svg" alt="previous" class="previousdistrict">
-        <h2 class="districtnamefooter">Wijknaam</h2>
+        <img src="icons/previous_white.svg" alt="previous" class="previousdistrict">
+        <h2 class="districtname">Wijknaam</h2>
         <img src="icons/next_white.svg" alt="next" class="nextdistrict">
     </section>
 
